--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -1220,3 +1220,11 @@
 		font-size: 28px;
 	}
 }
+
+
+@media (min-width: 1200px) {
+	.container {max-width: 1170px;}
+}
+@media (min-width: 1400px) {
+	.container {max-width: 1370px;}
+}
