--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5883,9 +5883,23 @@ button.btn.more_ {
 .imgText {
   display: flex;
   background: black;
-  margin-bottom: 5px;
+  margin: 6px 0px;
+  padding: 7px;
 }
 .Cont .t {
   padding: 5px 0px;
   font-size: 12px;
+}
+
+.slD .makes_Slide .card_postImg {
+  height: 200px;
+}
+.slD .card_postImg {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
 }
