--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5991,33 +5991,11 @@ span.numBr {color: #fff;}
 .dropdown:hover .dropdown-content { display: block; z-index: 999;}
 .labelList li:last-child {  width: 220px;}
 
-/* .eye_arrange { position: relative;}
-
-.eye_arrange:before {
-  content: '';
-  background-image: url(../images/eye-solidp.svg);
-  width: 25px;
-    height: 25px;
-    position: absolute;
-    right: 27px;
-    background-repeat: no-repeat;
-    top: 40px;
-    z-index: 8;
-    filter: contrast(0.5);
-    cursor: pointer;
+.blogDesc h2 span strong {
+  background-color: #000;
+  color: #fff;
 }
-.eye_cross{position: relative;}
-.eye_cross:before {
-  content: '';
-  background-image: url(../images/eye-slash-solid.svg);
-  width: 25px;
-    height: 25px;
-    position: absolute;
-    right: 27px;
-    background-repeat: no-repeat;
-    top: 40px;
-    z-index: 8;
-    filter: contrast(0.5);
-    cursor: pointer;
-} */
-
+.blogDesc h2 span, .blogDesc h2 p span {
+  background-color: #000 !important;
+  color: #fff !important;
+}
