--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6128,3 +6128,23 @@ a.dfr {
 .sideBar__ li a.nav-link.active{
       color: #fff !important;
 }
+.imgCross span button.close {
+  position: absolute;
+  right: 5px;
+  font-size: 10px;
+  top: -39px;
+  background: #f7931a;
+  color: #fff;
+  padding: 2px 6px;
+  opacity: 1;
+  border-radius: 100px;
+  font-weight: 100;
+  line-height: 13px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.imgCross span {
+  position: relative;
+}
