--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6179,3 +6179,26 @@ a.dfr {
   padding: 10px;
   box-shadow: 1px 1px 65px 1px #ffffff30;
 }
+.blogLiT {
+  margin-bottom: 25px;
+  box-shadow: 1px 0px 115px 61px #171616;
+}
+.blogLiT .blogPostText {
+  padding: 30px 15px;
+}
+.light .blogLiT {
+  margin-bottom: 25px;
+  box-shadow: 1px 0px 115px 61px #e9e5e5;
+}
+.blogLiT .blogPost {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 340px;
+  overflow: hidden;
+}
+
+.blogLiT .blogPost {
+  margin-top: 15px;
+}
