--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,6 @@
 text-transform: capitalize;
 }
 
-input[type=search],input[type=text], textarea{
+/* input[type=search],input[type=text], textarea{
   text-transform: capitalize;
-}
+} */
