Sheet UI bugs fixed

--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -7,6 +7,11 @@
 	box-shadow: none !important;
 }
 
+.searchSec .ant-select-selection-placeholder {
+	color: #fff;
+	font-weight: 400;
+}
+
 .rdw-dropdown-selectedtext>span {
 	color: #000;
 }
@@ -44,11 +49,12 @@
 
 
 /* Default styles for the select */
-.fields {
+.field {
 	background-color: #000 !important;
 	color: #fff !important;
 }
-.fields {
+
+.field {
 	background-color: white !important;
 	color: black !important;
 }
@@ -294,23 +300,76 @@
 }
 
 @media (max-width: 1199px) {
-	table.cartSection.cartth tr th:first-child {width: 60%;}
-	.toNv:before {width: 85%;	}
-	.searchForm input {	width: 300px;}
-	.dfk h5 {font-size: 15px;}
-	.plan_cardHead .plan_Price {	font-size: 33px;}
-	.plan_card {padding: 20px;}
-	.plan_cardBody {min-height: 258px;}
-	.navbar-brand img {	width: 161px !important;}
-	.secondNavbar .navbar-nav:before {	width: 82%;}
-	.searchForm input {	width: 100%;}
-	header {height: 105px;}
-	div#navbarNavDropdown {	width: 77%;	}
-	.searchForm {width: 345px;}
-	.autoCom {width: 33.5%;left: 38.6%;top: 54px;	}
-	.featuredAuctions_Slide.delair .card_postImg.dlr {width: 85px;height: 102px;}
-	.col-12.slider_ht {	height: 594px;}
-	.tabPlan button {width: 30.33%;}
+	table.cartSection.cartth tr th:first-child {
+		width: 60%;
+	}
+
+	.toNv:before {
+		width: 85%;
+	}
+
+	.searchForm input {
+		width: 300px;
+	}
+
+	.dfk h5 {
+		font-size: 15px;
+	}
+
+	.plan_cardHead .plan_Price {
+		font-size: 33px;
+	}
+
+	.plan_card {
+		padding: 20px;
+	}
+
+	.plan_cardBody {
+		min-height: 258px;
+	}
+
+	.navbar-brand img {
+		width: 161px !important;
+	}
+
+	.secondNavbar .navbar-nav:before {
+		width: 82%;
+	}
+
+	.searchForm input {
+		width: 100%;
+	}
+
+	header {
+		height: 105px;
+	}
+
+	div#navbarNavDropdown {
+		width: 77%;
+	}
+
+	.searchForm {
+		width: 345px;
+	}
+
+	.autoCom {
+		width: 33.5%;
+		left: 38.6%;
+		top: 54px;
+	}
+
+	.featuredAuctions_Slide.delair .card_postImg.dlr {
+		width: 85px;
+		height: 102px;
+	}
+
+	.col-12.slider_ht {
+		height: 594px;
+	}
+
+	.tabPlan button {
+		width: 30.33%;
+	}
 
 
 }
